arc: bluetooth: Implement set discoverable state

This CL handles request from Android to set discoverable timeout.
As Android API for this is set the discoverable timeout but the
Chrome API is set state on or off. ArcBluetoothBridge need to
maintain a new timer class to turn the discoverable state off
when the timer runs out.

BUG=643367,b:31180714
TEST=CTS Verifier app can make device discoverable for 30 seconds.
     Verified via bluetoothctl tool

Review-Url: https://codereview.chromium.org/2297903002
Cr-Commit-Position: refs/heads/master@{#416066}

Former-commit-id: fd2bc7fb594c0d299649b3416055014e3c402107